# fastapi-postgres-full-stack-template

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  dev_data.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: c7027087e542_create_users_table.py
backend/app/: dev_data.py  main.py  oauth.py
backend/app/config/: config.py  logging.py
backend/app/crud/: base.py  users.py
backend/app/database/: init_db.py
backend/app/models/: users.py
backend/app/routes/: auth.py  users.py
backend/app/schemas/: users.py
backend/app/tests/: conftest.py  test_auth.py
backend/migrations/: env.py
backend/migrations/versions/: 1b54b0601a39_init.py
backend/tests/: conftest.py  requirements.txt  test_auth.py
dev/: init-db.sh
